修改基础篇-数据类型-基本类型中的一些错别字

--- a/循序渐进C++编程/1.基础篇/2.数据类型/1.基础类型.md
+++ b/循序渐进C++编程/1.基础篇/2.数据类型/1.基础类型.md
@@ -27,7 +27,7 @@
         A. 逻辑上的与 或 非(逻辑上一般没有异或)用的操作符号分别为 &&(与)、 ||(或)、!(非)
         在C++11之后增加了 and or not 等关键字来代表 与 或 非
         具体使用如下:
-            a < b && b < c 表示 a小于b, 并且 b < c
+            a < b && b < c 表示 a小于b, 并且 b小于c
             a < 0 || a > 0 表示 a小于0 或者 a大于0 (其实就是a 不等于0， 数学中的区间表示为 (-∞，0) ∪ (0, +∞))
         B. 按位操作的与或非以及异或用的操作符分别是 &(位与) |(位或) ~(位取反) ^(异或)
         10001001 & 10000110 值为 1000000 
@@ -47,7 +47,7 @@
     3. C++是兼容C的， 但是C语言里面是没有布尔类型的，都是用整形来代替， 所有的非0值都是真， 只有0才是假， 所以才C++中， 整形都是可以隐式转换为布尔型(bool)的， 转换规则就和C语言的规则一样， 所有的非0都转换为true, 只有0才转换为false (包括后面会介绍的空指针)
 ## 字符型
     1. 类型表示 char， 其实就是一种整型， 只是这种整型有专门的用途， 就是用来表示我们在电脑屏幕上能看得见的字符，每一个能看到和看不到的字符都是由一个或多个字符型来存储的，常用的数学符号 + - * / 以及所有能在键盘上单个按键能对应字符都只占用一个char空间， 而中文字符(汉子以及符号)都用多个char 来存储
-    2. 字符类型的值， 所有单个char能存储可见的字符都可以用''包含住来表示， 如， 我们的英文字母 A, 表示为字符类型时，写成 'A', 这种写法只能表示单个char能存储的字符， 还有一些特殊字符, 需要用转义字符\来辅助表示， 如'\n'表示换行 '\t'表示一个制表符 '\\'表示一个\
+    2. 字符类型的值， 所有单个char能存储可见的字符都可以用单引号''引用来表示， 如， 我们的英文字母 A, 表示为字符类型时，写成 'A', 这种写法只能表示单个char能存储的字符， 还有一些特殊字符, 需要用转义字符\来辅助表示， 如'\n'表示换行 '\t'表示一个制表符 '\\'表示一个\
     3. 字符与字符之间也可以进行加减乘除， 只是这样结果会隐式转换成int型， 而char 型与int型的加减操作结果仍旧是char 型， 表示的是从当前的字符往后或者往前数的那个字符
 ## 数组类型
     1. 表示连续存储的多个同类型数值
@@ -56,7 +56,7 @@
         表示 10个char组成的数组: char chars[10];
     3. 数组名字代表的是存储这个数组的那块内存空间的首地址(就是后面我们会介绍到的指针， 数组是一种特殊指针)
     4. 我们可以使用以下几种方式来方位数组中的元素:
-        使用[]: 我们知道定义数组的时候， 我们中括号里面的数字表示的是数组元素的总个数， 但是在定义好数组之后使用[]加数字的方式， 就表示访问数组对应编号的某个元素， 但是在C语言以及C++以及整个C系列的编程语言中, 编号都是从0开始的， 0表示第一位， 1表示第2位, ...以此类推， 如 int a[100];  a[0] = 0; a[99] = 99; 要注意， 我们在使用[]加下标的方式访问数组元素的时候， 下标不能超过总数， 就比如 int a[100]; 那么我们在使用的时候，a[n]中的n 最大值只能是 99, 超过了会有未知的隐患
+        使用[]: 我们知道定义数组的时候， 我们中括号里面的数字表示的是数组元素的总个数， 但是在定义好数组之后使用[]加数字下标的方式， 就表示访问数组对应编号的某个元素， 但是在C语言以及C++以及整个C系列的编程语言中, 编号都是从0开始的， 0表示第一位， 1表示第2位, ...以此类推， 如 int a[100];  a[0] = 0; a[99] = 99; 要注意， 我们在使用[]加下标的方式访问数组元素的时候， 下标不能超过总数-1， 就比如 int a[100]; 那么我们在使用的时候，a[n]中的n 最大值只能是 99, 超过了会有未知的隐患
         使用*(表示把数组当成指针来对待): 对的， * 不仅能表示乘法(双目运算), 也能表示引用取某个地址的值(单目运算)，如 int a[100]; *a 表示a[0], *(a + 1) 表示a[1]; 所以你能使用 *(1 + a)也能使用 1[a] ,虽然编译器允许， 但是一般不建议这么搞
 ## 字符串类型
     1. 一般字面上的字符串都用双引号扩起来表示， 表示的是连续存储的一系列以0字符结尾的字符char数组, 如 "ABCDEFG"， 就包含了字符'A', 'B', 'C','D','E','F','G', '\0'(值为0)
