更新类型定义相关说明

--- a/循序渐进C++编程/1.基础篇/3.基本语法/1.标识符的声明与定义.md
+++ b/循序渐进C++编程/1.基础篇/3.基本语法/1.标识符的声明与定义.md
@@ -1,1 +1,105 @@
+# 标识符的声明与定义
+
+## 标识符类型
+
+1. 变量
+- 代码块内的局部变量
+    **代码块**: 用 {} 包裹起来的一段完整功能的代码
+    **局部变量**: 
+    定义方式: 
+        类型 变量名；
+        类型 变量名 = 初始值;
+        类型 变量名 {初始值}; /// **C++11开始**
+        auto 变量名 = 初始值; ///类型自动推导 **C++11开始** 
+- 全局变量
+分为公共全局变量和文件内全局变量
+公共全局变量声明方式:
+```cpp
+extern 类型 变量名；
+```
+然后只能定义一次:
+```cpp
+类型 变量名 = 初始值
+类型 变量名 {初始值};
+```
+文件内全局变量定义:
+```cpp
+static 类型 变量名 = 初始值;
+```
+- 成员变量
+
+扩展类型中结构体、类、共用体中的成员定义:
+```cpp
+
+struct ...{
+    类型 变量名; 
+    类型 变量名 {初始值}; /// C++11开始支持
+};
+
+class ...{
+private:
+    类型 变量名;
+    类型 变量名 {初始值};
+};
+
+union ...{
+    类型 变量名;
+};
+``` 
+
+- 静态变量
+
+局部静态变量:
+```cpp
+返回类型 函数名称(参数类型 参数名称...)
+{
+    static 类型 变量名称 = 初始值;
+}
+```
+类静态变量:
+```cpp
+class ... {
+
+    static 类型 变量名称;
+};
+```
+2. 函数
+- 一般函数
+- 成员函数
+    - 一般成员函数
+    - 静态成员函数
+    - 虚函数
+    - 纯虚函数
+
+3. 用户数据类型
+
+- 结构体类型
+```cpp
+struct 类型名 {
+ // ...
+};
+```
+
+- 类：
+```cpp
+class 类名 {
+    // ...
+};
+```
+
+- 枚举
+
+```cpp
+enum 枚举类型名 {
+    //...
+};
+```
+
+- 共用体
+
+```cpp
+union 共用体名称 {
+    //...
+};
+```
 
